finished timer function

--- a/css/style.less
+++ b/css/style.less
@@ -162,13 +162,13 @@ a:hover, .btn:hover {
 			color: lighten(#999, 10%);
 		}
 		.minute {
-			color: lighten(#999, 20%);
+			color: #FFF;
 		}
 		.second {
-			color: lighten(#999, 30%);
+			color: rgba(255,255,255,0.5);
 		}
 		.mili {
-			color: lighten(#999, 40%);
+			color: rgba(255,255,255,0.2);
 		}
 	}
 }
@@ -192,16 +192,16 @@ body.light {
 	}
 	#timer {
 		.hour {
-			color: saturate(lighten(@base, 15%),10%);
+			color: saturate(lighten(@base, 20%),10%);
 		}
 		.minute {
 			color: saturate(lighten(@base, 20%),10%);
 		}
 		.second {
-			color: saturate(lighten(@base, 25%),10%);
+			color: saturate(lighten(@base, 35%),10%);
 		}
 		.mili {
-			color: saturate(lighten(@base, 30%),10%);
+			color: saturate(lighten(@base, 50%),10%);
 		}
 	}
 	.btn { 
