--- a/css/style.less
+++ b/css/style.less
@@ -1,4 +1,5 @@
 @base: #373C93;
+@green: #30B967;
 
 body {
 	background: desaturate(darken(@base,20%),30%);
@@ -45,6 +46,7 @@ a:hover, .btn:hover {
 	text-align: center;
 	width: 40px;
 	font: 40px/1 Helvetica;
+	z-index: 1338;
 }
 #menu {
 	position: absolute;
@@ -53,8 +55,9 @@ a:hover, .btn:hover {
 	width: 200px;
 	height: 100%;
 	max-width: 100%;
-	background: desaturate(darken(@base,25%),30%);
+	background: rgba(0,0,0,0.3);
 	display: none;
+	z-index: 1337;
 	ul { 
 		padding-top: 60px;
 		list-style: none;
@@ -105,38 +108,42 @@ a:hover, .btn:hover {
 	}
 
 }
-.container {
+section.container {
 	position: absolute;
-	height: 140px;
+	height: 100px;
 	top: 50%;
 	width: 100%;
-	margin-top: -70px;
+	margin-top: -50px;
 	text-align: center;
-	font-size: 6em;
+	font-size: 100px;
+	transition: all 200ms ease-in-out;
 	&.big {
+		height: 200px;
+		margin-top: -100px;
 		.mode {
-			font-size: 1.5em;
+			font-size: 200px;
 		}
 	}
 	&.medium {
 	}
 	&.small {
+		height: 50px;
+		margin-top: -25px;
 		.mode {
-			font-size: .5em;
+			font-size: 50px;
 		}
 	}
 	.mode {
 		font-weight: 100;
-		line-height: 100px;
+		line-height: 1;
 		margin: auto;
-		padding: 20px;
 		display: inline-block;
 		vertical-align: top;
 		transition: all 200ms ease-in-out;
 		span {
 			transition: background 200ms ease-in-out;
 		}
-		&:hover span {
+		.container:hover span {
 			background: #FFF;
 			color: desaturate(darken(@base,20%),30%) !important;
 			cursor: pointer;
@@ -158,17 +165,31 @@ a:hover, .btn:hover {
 		}
 	}
 	#timer {
-		.hour {
-			color: lighten(#999, 10%);
-		}
-		.minute {
-			color: #FFF;
+		.container {
+			display: inline-block;
 		}
 		.second {
 			color: rgba(255,255,255,0.5);
 		}
 		.mili {
 			color: rgba(255,255,255,0.2);
+		}
+		&.active {
+			.container {
+				&:hover span {
+					background: saturate(lighten(@green,20%),30%);
+				}
+			}
+		}
+		&:reset {
+			content: "x";
+			position: absolute;
+			left: 100%;
+			top: 50%;
+			margin-top: -.5em;
+			height: 1em;
+			width: 1em;
+			font-size: 1em;
 		}
 	}
 }
@@ -180,7 +201,7 @@ body.light {
 	background: #F9F9F9;
 	color: saturate(lighten(@base, 20%),10%);
 	.mode {
-		&:hover span {
+		.container:hover span {
 			background: saturate(lighten(@base, 20%),10%);
 			color: #FFF !important;
 		}
@@ -212,7 +233,7 @@ body.light {
 		}
 	}
 	#menu {
-		background: #FFF;
+		background: rgba(255,255,255,0.5);
 		li {
 			&:hover {
 				background: saturate(lighten(@base, 55%),50%) !important;
