--- a/css/style.less
+++ b/css/style.less
@@ -5,18 +5,19 @@
     color: #FFF; 
     background: desaturate(@base,40%);
 }
-
+body, html {
+	margin: 0;
+	padding: 0;
+	min-height: 100%;
+	min-width: 700px;
+	color: #FFF;
+	font: 14pt/1.5 Helvetica;
+}
 body {
 	background-color: desaturate(darken(@base,20%),30%);
 	background-size: cover;
 	background-position: center;
-	margin: 0;
-	padding: 0;
-	min-width: 700px;
-	color: #FFF;
-	font: 14pt/1.5 Helvetica;
-	transition: background 200ms ease-in-out;
-}
+	transition: background 200ms ease-in-out;}
 ul {
 	margin: 0;
 	padding: 0;
@@ -122,6 +123,7 @@ section.menu {
 	top: 0;
 	width: 100%;
 	height: 100%;
+	min-width: 200px;
 	max-width: 100%;
 	display: none;
 	z-index: 1337;
