added save feature and favicon

--- a/css/style.less
+++ b/css/style.less
@@ -59,7 +59,15 @@ a:hover, .btn:hover {
 	font-size: .6em;
 	text-align: center;
 }
-
+#cursorCircle {
+	background: rgba(0,0,0,0.3);
+	position: fixed;
+	width: 0;
+	height: 0;
+	border-radius: 100%;
+	z-index: 51;
+	pointer-events: none;
+}
 
 
 
